assets/css/general.css
@media (min-width: 992px) {
    .modal-lg, .modal-xl {
        max-width: 900px;
    }
}

.main-nav .container {
    margin-top: 0px !important;
}

#nav-container {
	margin-top: 0;
	position: sticky;
	top: 0;
}

thead > tr > td {
	position: sticky;
	top: 45px;
}

.dashboard {
	padding-top: 15px;
}
.row.logdata {
	padding-top: 15px;
}

.statistics {
	padding-top: 15px;
}

.statistics_custom {
	padding-top: 15px;
}

.notes {
	padding-top: 15px;
}

.eqsl {
    padding-top: 15px;
}

.search {
	padding-top: 15px;
}

.logbook {
	padding-top: 15px;
}

.adif {
    padding-top: 15px;
}

.adif .alert p {
    margin-bottom: 0rem;
}

.api .alert p {
    margin-bottom: 0rem;
}


.qso_panel {
    padding-top: 25px;
}

.qso_panel #callsign {
    text-transform: uppercase;
}

.qso_panel #locator {
    text-transform: uppercase;
}

.qso_panel .iota_ref {
    text-transform: uppercase;
}

.qso_panel #sota_ref-selectized {
    text-transform: uppercase;
}

.qso_panel #wwff_ref-selectized {
    text-transform: uppercase;
}

.qso_panel #darc_dok-selectized {
    text-transform: uppercase;
}

.card-body #callsign {
    text-transform: uppercase;
}

.card-body #locator {
    text-transform: uppercase;
}

.card-body #vucc_grids {
    text-transform: uppercase;
}

.card-body #sota_ref_edit-selectized {
    text-transform: uppercase;
}

.card-body #wwff_ref_edit-selectized {
    text-transform: uppercase;
}

.card-body #darc_dok_edit-selectized {
    text-transform: uppercase;
}

.card-body #exch_rcvd {
    text-transform: uppercase;
}

.card-body #exch_sent {
    text-transform: uppercase;
}

.card-body #exch_gridsquare_r {
    text-transform: uppercase;
}

.workedGrid {
    border-color: green;
}

.newGrid {
    border-color: red;
    border-width: 2px;
}

#country {
    border: none;
}


TD.eqsl{
    width: 33px;
}

.eqsl-green{
    color: #00A000 !important;
    font-size: 1.1em;
    text-decoration: none !important;
}
.eqsl-red{
    color: #F00 !important;
    font-size: 1.1em;
}
.qsl-green{
    color: #00A000 !important;
    font-size: 1.1em;
}
.qsl-red{
    color: #F00 !important;
    font-size: 1.1em;
}
.qsl-yellow{
    color: #d39e00 !important;
    font-size: 1.1em;
}
.qsl-grey{
    color: #dddddd !important;
    font-size: 1.1em;
}
TD.lotw{
    width: 33px;
}
.lotw-green{
    color: #00A000 !important;
    font-size: 1.1em;
}
.lotw-red{
    color: #F00 !important;
    font-size: 1.1em;
}

.qso-edit-box {
    padding: 10px;
}

.previous-qsos .card-title {
    margin-bottom: 0px;
}

.qso-map .card-title {
    margin-bottom: 0px;
}

.qso-map {
    margin-bottom: 10px;
}

.callsign-suggest {
    margin-bottom: 10px;
}

.callsign-suggest .card-title {
    margin-bottom: 0px;
}


#search_box #callsign {
    text-transform: uppercase;
}

#nav-bar-search-input:focus {
    text-transform: uppercase;
}

.settings {
    padding-top: 15px;
}

.settings-nav {
    margin-bottom: 15px;
    list-style: none;
    background-color: #fff;
    border: 1px solid #d1d5da;
    border-radius: 3px;
}

.settings-nav .nav-link {
    list-style: none;
    background-color: #fff;
    border: 1px solid #d1d5da;
}

.settings-nav .nav-link:hover {
    background-color: #e1e4e8;

}

/* QSL Card Management CSS */

.qsl_management {
    padding-top: 15px;
}

/*
*
*
*/
.qso-map-new .card-header {
background: #0F2027;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
color: #ffffff;
}

#myTab .nav-link {
    padding: 8px !important;
}

#map {
    z-index: 1;
}

#qsomap {
    z-index: 1;
}

#create_station_profile .row {
    margin-bottom: 10px;
}

/*
*   Debug CSS
*/

    .debug_main .card {
        margin-bottom: 10px;
    }

    .was-map-dialog .modal-dialog {
        width: 100%;
    }

    @media (min-width: 576px) {
        .was-map-dialog .modal-dialog {
            max-width: 73% !important;
        }
    }

/*
 * Timepicker alignment
 */
.dxatlasdatepicker {
	padding-right: 0;
	padding-left: 0;
}

.modal-body {
	max-height: calc(100vh - 200px);
	overflow-y: auto;
}

/* Station Logbooks Styles */

div#station_logbooks_table_length {
    padding-top: 12px;
    padding-left: 12px;
    padding-bottom: 0px;
}

div#station_logbooks_table_filter {
    padding-top: 12px;
    padding-right: 12px;
    padding-bottom: 0px;
}

div#station_logbooks_table_info {
    padding-left: 12px;
}

div#station_logbooks_table_paginate {
    padding-right: 12px;
    padding-bottom: 12px;
}

div#station_logbooks_linked_table_length  {
    padding-top: 12px;
    padding-left: 12px;
    padding-bottom: 0px;
}

div#station_logbooks_linked_table_filter {
    padding-top: 12px;
    padding-left: 12px;
    padding-bottom: 0px;
}

div#station_logbooks_linked_table_info {
    padding-left: 12px;
}

div#station_logbooks_linked_table_paginate {
    padding-right: 12px;
    padding-bottom: 12px;
}

/* qrz.com profile picture Styles */

.card-title {
    margin-bottom: 0px;
 }

.callsign-image {
    margin-bottom: 10px;
}

.callsign-image-content {
    display: block;
    max-height: 300px;
    text-align: center;
}

.callsign-image-pic {
    max-height: 250px;
    max-width: 100%;
}

#mapactivators {
    height: calc(100vh - 380px) !important;
    max-height: 900px !important;
}

.copy-icon {
   display: block;
   cursor: pointer;
   padding-left: 0.5em;
}

.flash-copy {
   animation-name: flash;
   animation-timing-function: ease-out;
   animation-duration: 1s;
}

@keyframes flash {
   0% {
      background: #28a745;
   }
   100% {
      background: transparent;
   }
}

.api-key {
   font-family: Monospace;
}

